# file-queue

./: Dockerfile  Dockerfile.file-queue  README.md  docker-compose.yaml  flake.nix  pyproject.toml
.github/workflows/: test.yaml
file_queue/: __init__.py  __main__.py  cli.py  core.py
file_queue/plugins/: dask.py  filelock.py  ssh.py
fs_queue/: __init__.py  __main__.py  core.py
fs_queue/plugins/: dask.py  filelock.py  ssh.py
fs_task_queue/: cli.py  core.py  utils.py
fs_task_queue/plugins/: ssh.py
tests/: test_integration.py  test_unit.py
