[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fs-queue"
description = "Filesystem based task queue"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "build", "twine"]
extra = ["filelock", "paramiko", "dask", "distributed"]

[project.scripts]
fs-queue-worker = "fs_queue.__main__:main"